# molrs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md
.claude/skills/molrec-compat/: SKILL.md
.claude/skills/molrs-arch/: SKILL.md
.claude/skills/molrs-doc/: SKILL.md
.claude/skills/molrs-ffi/: SKILL.md
.claude/skills/molrs-impl/: SKILL.md
.claude/skills/molrs-perf/: SKILL.md
.claude/skills/molrs-review/: SKILL.md
.claude/skills/molrs-science/: SKILL.md
.claude/skills/molrs-spec/: SKILL.md
.claude/skills/molrs-test/: SKILL.md
.claude/specs/: molrs-pack-plugin-arch.md
.github/workflows/: ci-python.yml  ci-rust.yml  ci-wasm.yml  ci.yml  publish-molrs-python.yml  publish-molrs-wasm.yml  publish-molrs.yml  publish.yml
molrs/: Cargo.toml
molrs-capi/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
molrs-capi/src/: block.rs  error.rs  forcefield.rs  frame.rs  handle.rs  lib.rs  simbox.rs  store.rs
molrs-capi/tests/: integration.rs
molrs-capi/tests/cpp/: CMakeLists.txt  test_molrs_capi.cpp
molrs-compute/: Cargo.toml
molrs-compute/benches/: benchmarks.rs  center_of_mass.rs  cluster.rs  cluster_centers.rs  graph.rs  gyration_tensor.rs  helpers.rs  inertia_tensor.rs  msd.rs  radius_of_gyration.rs  rdf.rs  tensors.rs
molrs-compute/src/: accumulator.rs  center_of_mass.rs  cluster_centers.rs  error.rs  gyration_tensor.rs  inertia_tensor.rs  lib.rs  radius_of_gyration.rs  traits.rs  util.rs
molrs-compute/src/cluster/: mod.rs
molrs-compute/src/graph/: mod.rs  topo.rs
molrs-compute/src/kmeans/: mod.rs
molrs-compute/src/msd/: mod.rs  result.rs
molrs-compute/src/pca/: mod.rs
molrs-compute/src/rdf/: mod.rs  result.rs
molrs-core/: Cargo.toml
molrs-core/benches/: benchmarks.rs  helpers.rs
molrs-core/benches/core/: frame.rs  mod.rs  potential.rs
molrs-core/benches/ndarray_vs_vec/: primitives.rs
molrs-core/benches/neighbors/: linkcell.rs
molrs-core/examples/: forcefield.rs  molgraph_analysis.rs  molgraph_building.rs  molgraph_transforms.rs  typify_litfsi.rs  typify_molecule.rs
molrs-core/src/: atomistic.rs  coarsegrain.rs  error.rs  frame.rs  frame_access.rs  frame_view.rs  gasteiger.rs  grid.rs  hydrogens.rs  lib.rs  mapping.rs  molgraph.rs  molrec.rs  rings.rs  rotatable.rs  stereo.rs  types.rs
molrs-core/src/block/: access.rs  block_view.rs  column.rs  dtype.rs  mod.rs
molrs-core/src/compute/: accumulator.rs  error.rs  inertia_tensor.rs  mod.rs  radius_of_gyration.rs  reducer.rs  traits.rs  util.rs
molrs-core/src/forcefield/: mod.rs  xml.rs
molrs-core/src/gen3d/: builder.rs  distance_geometry.rs  fragment_data.rs  mod.rs  optimizer.rs  pipeline.rs  rotor_search.rs  stereo_guard.rs
molrs-core/src/io/: chgcar.rs  cube.rs  lammps_data.rs  lammps_dump.rs  mod.rs  pdb.rs  xyz.rs
molrs-core/src/math/: mod.rs
molrs-core/src/neighbors/: bruteforce.rs  linkcell.rs  mod.rs  query.rs
molrs-core/src/potential/: geometry.rs  mod.rs
molrs-core/src/region/: mod.rs  region.rs  simbox.rs
molrs-core/src/smiles/: error.rs  mod.rs  parser.rs  scanner.rs  to_atomistic.rs  validate.rs
molrs-core/src/typifier/: mod.rs
molrs-core/tests/: test_gen3d.rs  test_hydrogens.rs  test_io.rs  test_stereo.rs
molrs-core/tests/test_io/: test_chgcar.rs  test_cube.rs  test_lammps_data.rs  test_lammps_dump.rs  test_pdb.rs  test_xyz.rs
molrs-cxxapi/: Cargo.toml  build.rs
molrs-cxxapi/src/: lib.rs
molrs-embed/src/: lib.rs  pipeline.rs
molrs-embed/tests/: test_embed.rs
molrs-ff/: Cargo.toml
molrs-ff/examples/: forcefield.rs  typify_litfsi.rs  typify_molecule.rs
molrs-ff/src/: lib.rs  molrec_ext.rs
molrs-ff/src/forcefield/: mod.rs  xml.rs
molrs-ff/src/potential/: geometry.rs  mod.rs
molrs-ff/src/typifier/: mod.rs
molrs-ffi/: Cargo.toml
molrs-ffi/src/: error.rs  handle.rs  lib.rs  shared.rs  store.rs
molrs-gen3d/: Cargo.toml
molrs-gen3d/src/: fragment_data.rs  lib.rs  optimizer.rs  options.rs  pipeline.rs  rotor_search.rs  stereo_guard.rs
molrs-gen3d/tests/: test_gen3d.rs
molrs-io/: Cargo.toml
molrs-io/src/: chgcar.rs  cif.rs  cube.rs  lammps_data.rs  lammps_dump.rs  lib.rs  pdb.rs  reader.rs  sdf.rs  xyz.rs
molrs-io/src/zarr/: frame_io.rs  molrec.rs
molrs-io/tests/: test_data.rs  test_io.rs
molrs-io/tests/test_io/: test_chgcar.rs  test_lammps_data.rs  test_lammps_dump.rs  test_pdb.rs  test_xyz.rs
molrs-pack/: Cargo.toml  README.md
molrs-pack/benches/: evaluate_unscaled.rs  run_iteration.rs  run_phase.rs
molrs-pack/docs/: ARCHITECTURE.md  CODE_TOUR.md  architecture.md  concepts.md  extending.md  getting_started.md
molrs-pack/examples/mc_fold_chain/: main.rs
molrs-pack/examples/pack_bilayer/: main.rs
molrs-pack/src/: cases.rs  cell.rs  constraint.rs  euler.rs  handler.rs  hook.rs  initial.rs  lib.rs  movebad.rs  objective.rs  packer.rs  restraint.rs  target.rs  validation.rs
molrs-pack/src/constraints/: container.rs
molrs-pack/tests/: examples_batch.rs  gradient.rs  hook.rs  packer.rs  relaxer.rs  restraint.rs  target.rs
molrs-python/: Cargo.toml  README.md  pyproject.toml
molrs-python/examples/: forcefield_ethane.py  full_pipeline.py  gen3d_water.py  pack_bilayer.py
molrs-python/python/molrs/: __init__.py  molrs.pyi
molrs-python/src/: block.rs  compute.rs  constraint.rs  forcefield.rs  frame.rs  gen3d.rs  helpers.rs  io.rs  lib.rs  linkedcell.rs  molgraph.rs  packer.rs  region.rs  store.rs  target.rs
molrs-python/tests/: conftest.py  test_block.py  test_box.py  test_constraint.py  test_frame.py  test_io.py  test_linkedcell.py  test_packer.py  test_region.py
molrs-python/tests/data/: water.xyz
molrs-smiles/: Cargo.toml
molrs-smiles/src/: ast.rs  error.rs  lib.rs  parser.rs  to_atomistic.rs  validate.rs
molrs-smiles/src/chem/: ast.rs  validation.rs
molrs-smiles/src/smarts/: matcher.rs  mod.rs  pattern.rs  predicate.rs  validate.rs
molrs-smiles/src/smiles/: to_atomistic.rs
molrs-smiles/tests/: smarts_matching.rs
molrs-wasm/: Cargo.toml  README.md
molrs-wasm/src/: compute.rs  gen3d.rs  lib.rs  smiles.rs
molrs/src/: lib.rs
scripts/: README.md  mmff_to_xml.py
(+71 files in other folders)
