[package]
name = "molcrafts-molrs-gen3d"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "3D coordinate generation for MolCrafts molecular modeling"
repository.workspace = true
homepage.workspace = true

[lib]
name = "molrs_gen3d"

[dependencies]
molrs = { workspace = true }
ndarray = "0.17"
once_cell = "1.20"
rand = "0.9"
