[package]
name = "molcrafts-molrs-smiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "SMILES/SMARTS parser for MolCrafts molecular modeling"
repository.workspace = true
homepage.workspace = true

[lib]
name = "molrs_smiles"

[dependencies]
molrs = { path = "../molrs-core", package = "molcrafts-molrs" }
